# model/domain/order_course.go
@@ -1,1 +1,6 @@
 package domain
+
+type OrderCourse struct {
+	UserId   uint
+	CourseId uint
+}
